force-app/main/default/objects/Knowledge__kav/fields/Answer__c.field-meta.xml
<CustomField>
    <fullName>Answer__c</fullName>
    <complianceGroup>Source_Salesforce; Integrity - Accurate;Privacy - Non Personal Information</complianceGroup>
    <description>Article text</description>
    <label>Answer</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>