force-app/main/default/objects/Knowledge__kav/fields/Audience__c.field-meta.xml
<CustomField>
    <fullName>Audience__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>The audience that is related to the specific knowledge article.</description>
    <label>Audience</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>BOH Coach</fullName>
            </value>
            <value>
                <fullName>Card Dispute Agent</fullName>
            </value>
            <value>
                <fullName>Coach</fullName>
            </value>
            <value>
                <fullName>Credit Assessor Lead</fullName>
            </value>
            <value>
                <fullName>Credit Assessment Officer</fullName>
            </value>
            <value>
                <fullName>ID Ops &amp; Fraud Agent</fullName>
            </value>
            <value>
                <fullName>Residential Broker Manager</fullName>
            </value>
            <value>
                <fullName>Support Coach</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>