force-app/main/default/objects/Knowledge__kav/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <complianceGroup>Source_Salesforce;Integrity - Accurate;Privacy - Non Personal Information</complianceGroup>
    <description>Body of the knowledge article</description>
    <label>Body</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>