force-app/main/default/objects/Knowledge__kav/fields/IDR_Issue_Type__c.field-meta.xml
<CustomField>
    <fullName>IDR_Issue_Type__c</fullName>
    <complianceGroup>Source - Salesforce;Privacy - Non Personal Information;Integrity - Accurate</complianceGroup>
    <description>Describes the issue type for article type IDR knowledge.</description>
    <label>Issue Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IDR_Issue_Type</valueSetName>
    </valueSet>
</CustomField>