force-app/main/default/objects/Knowledge__kav/fields/IDR_Subsequent_Issue_Type__c.field-meta.xml
<CustomField>
    <fullName>IDR_Subsequent_Issue_Type__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Describes the subsequent issue type for articles of type IDR Knowledge</description>
    <label>Subsequent Issue Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>IDR_Issue_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>IDR_Subsequent_Issue_Type</valueSetName>
    </valueSet>
</CustomField>