force-app/main/default/objects/Knowledge__kav/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information</complianceGroup>
    <description>Article Text</description>
    <label>Question</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>