force-app/main/default/objects/Knowledge__kav/fields/Reason_for_Change__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Change__c</fullName>
    <complianceGroup>Source_Salesforce;Integrity - Accurate;Privacy - Non Personal Information</complianceGroup>
    <label>Reason for Change</label>
    <type>TextArea</type>
</CustomField>