force-app/main/default/objects/Knowledge__kav/fields/Topic__c.field-meta.xml
<CustomField>
    <fullName>Topic__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>The given topic related to the knowledge article.</description>
    <label>Topic</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Card</fullName>
            </value>
            <value>
                <fullName>Loans</fullName>
            </value>
            <value>
                <fullName>Feedback &amp; Complaints</fullName>
            </value>
            <value>
                <fullName>Money</fullName>
            </value>
            <value>
                <fullName>Payments</fullName>
            </value>
            <value>
                <fullName>Profile &amp; Security</fullName>
            </value>
            <value>
                <fullName>Contacting ANZ Plus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>