force-app/main/default/objects/Knowledge__kav/recordTypes/IDR_Knowledge.recordType-meta.xml
<RecordType>
    <fullName>IDR_Knowledge</fullName>
    <active>true</active>
    <label>IDR Knowledge</label>
</RecordType>