force-app/main/default/objects/Knowledge__kav/validationRules/VR01_ChangeReason_Should_Not_Be_Empty.validationRule-meta.xml
<ValidationRule>
    <fullName>VR01_ChangeReason_Should_Not_Be_Empty</fullName>
    <active>true</active>
    <description>Reason for change field should not be empty if it is not the first version</description>
    <errorConditionFormula>And (
!IsNew(),
ISBLANK( Reason_for_Change__c ) ,
!ISBLANK(LastPublishedDate )
)</errorConditionFormula>
	<errorDisplayField>Reason_for_Change__c</errorDisplayField>
    <errorMessage>Reason for Change is required before publishing</errorMessage>
</ValidationRule>