force-app/main/default/objects/Knowledge__kav/listViews/BOH_Coach_Articles.listView-meta.xml
<ListView>
    <fullName>BOH_Coach_Articles</fullName>
    <columns>TITLE</columns>
    <columns>Topic__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filters>
        <field>Audience__c</field>
        <operation>equals</operation>
        <value>BOH Coach,All</value>
    </filters>
    <filterScope>Everything</filterScope>
    <label>BOH Coach Articles</label>
    <sharedTo>
        <role>BOH_Coach</role>
        <role>BOH_Coach_Lead</role>
        <role>Business_Admin</role>
        <role>Coach</role>
        <role>Coach_Lead</role>
        <role>Content_Viewer</role>
        <role>Content_Writer</role>
        <role>Credit_Assessment_Officer</role>
        <role>Credit_Assessor_Lead</role>
        <role>FinCrime_Agent</role>
        <role>FraudX_Agent</role>
        <role>Join_Lead</role>
        <role>Quality_Analyst</role>
        <role>Quality_Capability_Lead</role>
        <role>Support_Coach</role>
    </sharedTo>
</ListView>