force-app/main/default/objects/Knowledge__kav/listViews/Card_Articles.listView-meta.xml
<ListView>
    <fullName>Card_Articles</fullName>
    <columns>TITLE</columns>
    <columns>Audience__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Topic__c</field>
        <operation>equals</operation>
        <value>Card</value>
    </filters>
    <label>Card Articles</label>
</ListView>