force-app/main/default/objects/Knowledge__kav/listViews/Coach_Articles.listView-meta.xml
<ListView>
    <fullName>Coach_Articles</fullName>
    <columns>TITLE</columns>
    <columns>Topic__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Audience__c</field>
        <operation>includes</operation>
        <value>Coach</value>
    </filters>
    <label>Coach Articles</label>
</ListView>