force-app/main/default/objects/Knowledge__kav/listViews/draft_articles.listView-meta.xml
<ListView>
    <fullName>draft_articles</fullName>
    <columns>TITLE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>VALIDATION_STATUS_ENUM</columns>
    <columns>PUBLISH_STATUS</columns>
    <filters>
        <field>PUBLISH_STATUS</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filterScope>Everything</filterScope>
    <label>Draft Articles</label>
    <sharedTo>
        <role>Content_Writer</role>
        <role>Credit_Assessor_Lead</role>
        <role>IDR_Content_Writer</role>
        <role>Coach_Lead</role>
        <role>Business_Admin</role>
        <role>BOH_Coach_Lead</role>
    </sharedTo>
</ListView>