force-app/main/default/objects/Knowledge__kav/listViews/ID_Ops_Agent_Articles.listView-meta.xml
<ListView>
    <fullName>ID_Ops_Agent_Articles</fullName>
    <columns>TITLE</columns>
    <columns>Topic__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Audience__c</field>
        <operation>includes</operation>
        <value>All,ID Ops &amp; Fraud Agent</value>
    </filters>
    <label>ID Ops &amp; Fraud Agent Articles</label>
</ListView>