force-app/main/default/objects/Knowledge__kav/listViews/Money_Articles.listView-meta.xml
<ListView>
    <fullName>Money_Articles</fullName>
    <columns>TITLE</columns>
    <columns>Audience__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Topic__c</field>
        <operation>equals</operation>
        <value>Money</value>
    </filters>
    <label>Money Articles</label>
</ListView>